fix(classroom-finder): ios title alignment

--- a/src/pages/classroom-finder/classroom-finder-modal.scss
+++ b/src/pages/classroom-finder/classroom-finder-modal.scss
@@ -17,12 +17,4 @@ page-classroom-finder-modal {
     background-color: #92fcaf !important;
     border-left: 1rem solid #92fcaf;
   }
-
-  .toolbar-ios ion-title {
-    padding: 0 12px 1px;
-  }
-
-  .toolbar-title-ios {
-    text-align: left;
-  }
 }
